--- a/src/style.css
+++ b/src/style.css
@@ -128,7 +128,7 @@ body {
     box-shadow: 0px 1px 0px 0px rgb(160, 160, 160);
 }
 
-#content .right .popular-cities .weather-details-title {
+#content .right .popular-cities .weather-cities-title {
     grid-column: 1/-1;
 }
 
